# models/index.js
@@ -1,12 +1,8 @@
 const allmovies = require('./allmovies');
-const deploys = require('./deploys');
 const movies = require('./movies');
-const shibaimages = require('./shibaimages');
 const users = require('./users');
 
 module.exports = {
   allmovies,
-  deploys,
   movies,
-  shibaimages,
   users};
